terraform/2-internet-gateway.tf

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.main.id

  tags = {
    Name = "igw"
  }
}
